homes grid gap bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@ body {
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 3.5rem;
 }
 
 .home__img {
@@ -278,6 +279,10 @@ body {
   font-weight: 400;
   -webkit-transform: translateY(50%);
           transform: translateY(50%);
+}
+
+.home__location, .home__rooms {
+  margin-top: 2.5rem;
 }
 
 .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
