--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -12,6 +12,7 @@
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 3.5rem;
 
   &__img {
     width: 100%;
@@ -47,6 +48,11 @@
     color: #fff;
     font-weight: 400;
     transform: translateY(50%);
+  }
+
+  &__location,
+  &__rooms {
+    margin-top: 2.5rem;
   }
 
   &__location,
